@@ -1,5 +1,10 @@
 2019-11-15  Joseph Myers  <joseph@codesourcery.com>
 
+	* gcc.dg/c2x-attr-fallthrough-2.c,
+	gcc.dg/c2x-attr-fallthrough-3.c: New tests.
+
+2019-11-15  Joseph Myers  <joseph@codesourcery.com>
+
 	* gcc.dg/c2x-attr-deprecated-1.c, gcc.dg/c2x-attr-deprecated-2.c,
 	gcc.dg/c2x-attr-deprecated-3.c: New tests.
 
